[shell-release]next version 3.1.3-SNAPSHOT